<resources>
    <string name="app_name">MVPShop</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="home">首页</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="search">搜索</string>
    <string name="detail_title">商品详情</string>
    <string name="custom_service">客服</string>
    <string name="like">收藏</string>
    <string name="put_into_cart">加入购物车</string>
    <string name="purchase">立即购买</string>
</resources>
