<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GoodsDetail.GoodsDetailActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detail_title"
        app:layout_constraintBottom_toTopOf="@id/detail_ops_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCornSilk"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/detail_title"
        app:titleTextColor="@color/colorGrey" />


    <LinearLayout
        android:id="@+id/detail_ops_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/custom_service"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:drawableTop="@drawable/ic_headset_mic_black_24dp"
            android:text="@string/custom_service" />

        <TextView
            android:id="@+id/like"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:drawableTop="@drawable/ic_favorite_border_black_24dp"
            android:text="@string/like" />

        <TextView
            android:id="@+id/cart"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:drawableTop="@drawable/ic_shopping_cart_black_24dp"
            android:text="@string/cart" />

        <TextView
            android:id="@+id/put_into_cart"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@color/colorOrange"
            android:text="@string/put_into_cart" />

        <TextView
            android:id="@+id/purchase"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@color/colorRed"
            android:text="@string/purchase" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>